--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koppla Ord</title>
+    <title>Gruppera Ord</title>
     <link rel="stylesheet" href="main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="correct-answers" id="correct-answers"></div>
-  <div class="grid-container" id="grid-container"></div>
-  <div id="message"></div>
-  <button id="new-game">New Game</button>
-  <button id="shuffle-cards">Shuffle Cards</button>
+  <main>
+    <h1>Gruppera ord</h1>
+    <div class="correct-answers" id="correct-answers"></div>
+    <div class="grid-container" id="grid-container"></div>
+    <div id="message"></div>
+    <button id="new-game">Spela igen</button>
+    <button id="shuffle-cards">Blanda om</button>
+  </main>
+  <footer>
+    Ihophackat av Hagge
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
