--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="correct-answers" id="correct-answers"></div>
     <div class="grid-container" id="grid-container"></div>
     <div id="message"></div>
-    <button id="new-game">Spela igen</button>
+    <button id="new-game">Nytt spel</button>
     <button id="shuffle-cards">Blanda om</button>
   </main>
   <footer>
