--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </footer>
   <div id="splash-screen" class="splash-screen">
     <div class="splash-content">
-      <h1>Grattis!</h1>
+      <h1>Grattis! 🎉</h1>
       <div id="confetti-container"></div>
     </div>
   </div>
