Separate games.js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <div id="confetti-container"></div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="games.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
