--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
   <script src="games.js"></script>
   <script src="main.js"></script>
   <script src="toast.js"></script>
+  <script src="animations.js"></script>
 </body>
 </html>
