List incorrect guesses. Improve confetti win splash

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="correct-answers" id="correct-answers"></div>
     <div class="grid-container" id="grid-container"></div>
     <div id="message"></div>
+    <div class="failed-guesses hidden">
+      <h2>Felaktiga gissningar 🐁 🧪 </h2>
+      <div class="failed-guesses-text"></div>
+    </div>
     <button id="new-game">Spela igen</button>
     <button id="shuffle-cards">Blanda om</button>
   </main>
@@ -33,8 +37,9 @@
   </footer>
   <div id="splash-screen" class="splash-screen">
     <div class="splash-content">
-      <h1>Grattis! 🎉</h1>
       <div id="confetti-container"></div>
+      <h1>Snyggt jobbat! 🎉</h1>
+      <img alt="" src="https://media2.giphy.com/media/BJm2BtzkT86MSUnDDE/giphy.gif?cid=6c09b952cm3mifjx0xt9bodggkxd8o07n7fjlfsd04big92x&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s">
     </div>
   </div>
   <script src="games.js"></script>
