--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <main>
-      <h1>Gruppera 4 ord</h1>
+      <h1>Gruppera 4 ord 🐦‍⬛</h1>
 
       <div class="toast" id="toast-top"></div>
       <div class="correct-answers" id="correct-answers"></div>
@@ -32,7 +32,7 @@
         <h2>Felaktiga gissningar 🐁 🧪 </h2>
         <div class="failed-guesses-text"></div>
       </div>
-      <button id="shuffle-cards">Blanda spelplanen</button>
+      <button id="shuffle-cards">Blanda korten</button>
       
       <button id="new-game">Nytt spel</button>
       <br>
