Position celebrating animal at splash bottom

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
       <div class="splash-content">
         <div id="confetti-container"></div>
         <h1>Snyggt jobbat! 🎉</h1>
-        <img alt=""
-          src="https://media2.giphy.com/media/BJm2BtzkT86MSUnDDE/giphy.gif?cid=6c09b952cm3mifjx0xt9bodggkxd8o07n7fjlfsd04big92x&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s">
+        <div class="img-wrap">
+          <img alt="firande djur"
+            src="https://media2.giphy.com/media/MNKo1E8MO85bfx6U2n/giphy.gif?cid=6c09b952fnsq5p8r6trgbw6rhpn7g01jy0ylnjsma05ehox4&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g">
+        </div>
       </div>
     </div>
     <script src="games.js"></script>
