--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         <label for="min-difficulty">Svårighet:</label>
         <select id="difficulty-select">
           <option value="x">Slumpat</option>
-          <option value="1">Lätt</option>
-          <option value="2">Medium</option>
-          <option value="3">Svår</option>
+          <option value="1">Görlätt</option>
+          <option value="2">Enkel</option>
+          <option value="3">Medel</option>
+          <option value="4">Klurig</option>
         </select>
       </div>
 
