--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
       <header>
         <h1>Gruppera 4 ord 🐦‍⬛</h1>
+        <span class="difficulty-level"></span>
       </header>
 
       <div class="toast" id="toast-top"></div>
