newGame on select-change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <main>
       <header>
         <h1>Gruppera 4 ord 🐦‍⬛</h1>
-        <span class="difficulty-level"></span>
+        <span class="difficulty-level">
+          <span style="font-weight: 600;";>LEVEL</span>
+          <span class="difficulty-level-text"></span>
+        </span>
       </header>
 
       <div class="toast" id="toast-top"></div>
